<?xml version="1.0"?>
<package>
  <name>percipio_camera</name>
  <version>0.2.6</version>
  <description>Drivers for the Asus Xtion and Primesense Devices. For using a kinect
  with ROS, try the <a href="http://wiki.ros.org/freenect_stack">freenect stack</a> 
  </description>
  <author email="jkammerl@todo.todo">Julius Kammerl</author>
  <license>BSD</license>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend>libpercipio2-dev</build_depend>-->
  <build_depend>camera_info_manager</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <!--<run_depend>libpercipio2-dev</run_depend>-->
  <run_depend>camera_info_manager</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <nodelet plugin="${prefix}/percipio_nodelets.xml"/>
  </export>
</package>
