<?xml version="1.0"?>
<package>
  <name>percipio_camera</name>
  <version>1.0.0</version>
  <description>Launch files to start the percipio_camera drivers.</description>
  <author email="jet_zou@todo.todo">Jet Zou</author>
  <license>BSD</license>

  <maintainer email="jet_zou@percipio.xyz">Jet Zou</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend>libpercipio2-dev</build_depend>-->
  <build_depend>camera_info_manager</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <!--<run_depend>libpercipio2-dev</run_depend>-->
  <run_depend>camera_info_manager</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <nodelet plugin="${prefix}/percipio_nodelets.xml"/>
  </export>
</package>
